--- a/app/src/main/res/layout/fragment_references_pager.xml
+++ b/app/src/main/res/layout/fragment_references_pager.xml
@@ -21,7 +21,7 @@
             android:background="?attr/material_theme_border_color" />
 
         <com.rd.PageIndicatorView
-            android:id="@+id/pageIndicatorView"
+            android:id="@+id/page_indicator_view"
             android:layout_width="wrap_content"
             android:layout_height="56dp"
             android:layout_gravity="center_horizontal"
