--- a/app/src/main/res/layout/activity_page.xml
+++ b/app/src/main/res/layout/activity_page.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_page_container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/base10">
+    android:layout_height="match_parent">
 
     <fragment
         android:id="@+id/page_fragment"
