Animate layout changes in Lead Image container.
Change-Id: I5c0b18d5e166df9438704a193397f5be3c5dae25

--- a/app/src/main/res/layout/view_page_header.xml
+++ b/app/src/main/res/layout/view_page_header.xml
@@ -8,7 +8,8 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:animateLayoutChanges="true">
 
         <org.wikipedia.views.FaceAndColorDetectImageView
             android:id="@+id/view_page_header_image"
