--- a/app/src/main/res/layout/dialog_link_preview.xml
+++ b/app/src/main/res/layout/dialog_link_preview.xml
@@ -28,7 +28,7 @@
                 android:clickable="true"
                 android:minHeight="64dp">
 
-                <com.facebook.drawee.view.SimpleDraweeView
+                <ImageView
                     android:id="@+id/link_preview_thumbnail"
                     style="@style/SimpleDraweeViewPlaceholder"
                     android:layout_width="@dimen/defaultListItemSize"
