--- a/app/src/main/res/values/languages_list.xml
+++ b/app/src/main/res/values/languages_list.xml
@@ -416,7 +416,7 @@
     <item>walon</item>
     <item>Bân-lâm-gú</item>
     <item>Türkmençe</item>
-    <item>Avañe'ẽ</item>
+    <item>Avañe\'ẽ</item>
     <item>吴语</item>
     <item>Malagasy</item>
     <item>Fiji Hindi</item>
