--- a/app/src/main/res/layout/item_page_list_entry.xml
+++ b/app/src/main/res/layout/item_page_list_entry.xml
@@ -80,7 +80,7 @@
             android:layout_height="@dimen/view_list_card_item_image"
             android:layout_marginEnd="@dimen/list_item_horizontal_padding" />
 
-        <androidx.appcompat.widget.AppCompatImageView
+        <ImageView
             android:id="@+id/page_list_item_selected_image"
             android:layout_width="@dimen/view_list_card_item_image"
             android:layout_height="@dimen/view_list_card_item_image"
