--- a/app/src/main/res/values/credits.xml
+++ b/app/src/main/res/values/credits.xml
@@ -51,6 +51,10 @@
 
         <a href="https://github.com/KeepSafe/TapTargetView">TapTargetView</a>
         <!-- https://github.com/KeepSafe/TapTargetView/blob/master/LICENSE -->
-        (<a href="content:///android_asset/licenses/TapTargetView">license</a>)
+        (<a href="content:///android_asset/licenses/TapTargetView">license</a>),
+
+        <a href="https://square.github.io/leakcanary/">LeakCanary</a>
+        <!-- https://raw.githubusercontent.com/square/leakcanary/master/LICENSE.txt -->
+        (<a href="content:///android_asset/licenses/LeakCanary">license</a>)
     </string>
 </resources>
