--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -34,6 +34,7 @@
 
     <style name="AppTheme.Splash">
         <item name="android:windowBackground">@drawable/splash_bg</item>
+        <item name="android:navigationBarColor">@color/base10</item>
     </style>
 
     <style name="AppTheme.Page">
