--- a/app/src/main/res/layout/dialog_reference_list.xml
+++ b/app/src/main/res/layout/dialog_reference_list.xml
@@ -20,6 +20,7 @@
             android:paddingBottom="8dp"
             android:text="@string/reference_list_title"
             android:textColor="?attr/primary_text_color"
+            android:fontFamily="sans-serif-medium"
             android:textSize="16sp" />
 
         <View
@@ -32,6 +33,8 @@
         android:id="@+id/referencesRecycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:scrollbars="vertical" />
 
 </LinearLayout>
