Properly tint arrow image.
Change-Id: I65ca355592c0723e93c41c4cb87c08789a33a584

--- a/app/src/main/res/layout/item_reference.xml
+++ b/app/src/main/res/layout/item_reference.xml
@@ -28,6 +28,7 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             app:srcCompat="@drawable/ic_arrow_upward_black_24dp"
+            app:tint="?attr/material_theme_primary_color"
             android:clickable="true"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:contentDescription="@null"/>
