--- a/app/src/main/res/layout/dialog_reference_list.xml
+++ b/app/src/main/res/layout/dialog_reference_list.xml
@@ -7,27 +7,36 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="56dp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_gravity="center_vertical"
+            app:srcCompat="@drawable/ic_oojs_references"
+            app:tint="?attr/material_theme_secondary_color"
+            android:contentDescription="@null"/>
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="56dp"
-            android:gravity="center_vertical"
-            android:paddingStart="@dimen/list_item_horizontal_padding"
-            android:paddingTop="8dp"
-            android:paddingEnd="@dimen/list_item_horizontal_padding"
-            android:paddingBottom="8dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="16dp"
             android:text="@string/reference_list_title"
             android:textColor="?attr/primary_text_color"
             android:fontFamily="sans-serif-medium"
             android:textSize="16sp" />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:background="?attr/material_theme_border_color" />
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="?attr/material_theme_border_color" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/referencesRecycler"
