--- a/app/src/main/res/layout/item_reference.xml
+++ b/app/src/main/res/layout/item_reference.xml
@@ -4,45 +4,38 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="8dp"
-    android:paddingBottom="8dp">
+    android:paddingTop="16dp"
+    android:paddingBottom="16dp">
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/reference_id_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <!-- TODO: decide whether to show the ordinal of the reference. (is it useful?) -->
-        <TextView
-            android:id="@+id/reference_id_text"
-            android:layout_width="24dp"
-            android:layout_height="wrap_content"
-            android:textColor="?attr/material_theme_primary_color"
-            android:textAlignment="center"
-            android:fontFamily="sans-serif-medium"
-            android:visibility="gone"
-            tools:text="123"/>
-
-        <ImageView
-            android:id="@+id/reference_back_link"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            app:srcCompat="@drawable/ic_arrow_upward_black_24dp"
-            app:tint="?attr/material_theme_primary_color"
-            android:clickable="true"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:contentDescription="@null"/>
-
-    </LinearLayout>
+        android:textColor="?attr/material_theme_primary_color"
+        android:maxLines="1"
+        android:minWidth="24dp"
+        tools:text="123"/>
 
     <TextView
         android:id="@+id/reference_text"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:lineSpacingMultiplier="1.4"
+        android:layout_weight="1"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:lineSpacingMultiplier="1.5"
         android:textColor="?attr/material_theme_primary_color"
         android:textIsSelectable="true"
         tools:text="Lorem ipsum" />
+
+    <ImageView
+        android:id="@+id/reference_back_link"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        app:srcCompat="@drawable/ic_arrow_up_alt_24px"
+        app:tint="?attr/material_theme_secondary_color"
+        android:clickable="true"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:contentDescription="@null"/>
 
 </LinearLayout>
