--- a/app/src/main/res/layout-land/fragment_suggested_edits_cards_item.xml
+++ b/app/src/main/res/layout-land/fragment_suggested_edits_cards_item.xml
@@ -57,7 +57,6 @@
                 android:id="@+id/viewArticleContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:minHeight="116dp"
                 android:orientation="vertical"
                 android:paddingTop="11dp"
                 android:paddingBottom="8dp">
@@ -112,8 +111,7 @@
 
                 <FrameLayout
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1">
+                    android:layout_height="wrap_content">
 
                     <TextView
                         android:id="@+id/viewArticleExtract"
