--- a/app/src/main/res/layout-land/fragment_suggested_edits_cards_item.xml
+++ b/app/src/main/res/layout-land/fragment_suggested_edits_cards_item.xml
@@ -49,7 +49,7 @@
                 android:id="@+id/viewArticleImage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:actualImageScaleType="focusCrop"
+                app:actualImageScaleType="fitCenter"
                 app:viewAspectRatio="3.8"
                 app:fadeDuration="0" />
 
