--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -347,7 +347,7 @@
     <style name="SimpleDraweeViewPlaceholder.SuggestedEdits">
         <item name="placeholderImage">?attr/material_theme_border_color</item>
         <item name="failureImage">?attr/material_theme_border_color</item>
-        <item name="backgroundImage">@color/base30</item>
+        <item name="backgroundImage">?attr/suggestions_background_color</item>
     </style>
 
     <style name="SimpleDraweeViewPlaceholder.SuggestedEdits.Review">
