--- a/app/src/main/res/layout/fragment_suggested_edits_cards_item.xml
+++ b/app/src/main/res/layout/fragment_suggested_edits_cards_item.xml
@@ -47,7 +47,7 @@
                     style="@style/SimpleDraweeViewPlaceholder.SuggestedEdits"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:scaleType="centerInside"
+                    app:actualImageScaleType="fitCenter"
                     app:fadeDuration="0" />
             </LinearLayout>
 
