--- a/app/src/main/res/layout/fragment_suggested_edits_cards.xml
+++ b/app/src/main/res/layout/fragment_suggested_edits_cards.xml
@@ -126,7 +126,6 @@
                     android:id="@+id/addContributionImage"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
-                    android:layout_marginEnd="8dp"
                     android:contentDescription="@null"
                     android:tint="@color/base100"
                     app:srcCompat="@drawable/ic_add_gray_white_24dp" />
@@ -135,6 +134,7 @@
                     android:id="@+id/addContributionText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
                     android:text="@string/suggested_edits_add_description_button"
                     android:textSize="14sp"
                     android:fontFamily="sans-serif-medium"
