--- a/app/src/main/res/layout/fragment_suggested_edits_image_tags_item.xml
+++ b/app/src/main/res/layout/fragment_suggested_edits_image_tags_item.xml
@@ -48,16 +48,30 @@
             android:layout_marginTop="16dp"
             android:gravity="center"/>
 
-        <com.google.android.material.chip.ChipGroup
-            android:id="@+id/tagsChipGroup"
+        <LinearLayout
+            android:id="@+id/tagsContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:foregroundGravity="center"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:chipSpacing="16dp"
-            android:layout_marginBottom="16dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"/>
+            android:padding="16dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:text="@string/suggested_edits_image_tags_choose"
+                android:fontFamily="sans-serif-medium"
+                android:textColor="?attr/colorAccent"/>
+
+            <com.google.android.material.chip.ChipGroup
+                android:id="@+id/tagsChipGroup"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                app:chipSpacing="16dp"/>
+
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
