Proper styling for chip text.
Change-Id: I88c3b24862e70c097a77e01802a9dad95dd0690e

--- a/app/src/main/res/layout/fragment_suggested_edits_image_tags_item.xml
+++ b/app/src/main/res/layout/fragment_suggested_edits_image_tags_item.xml
@@ -46,6 +46,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="16dp"
+            android:textColor="?android:attr/textColorTertiary"
             android:gravity="center"/>
 
         <LinearLayout
@@ -57,6 +58,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/tagsHintText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
