--- a/app/src/main/res/layout/fragment_suggested_edits_image_tags_item.xml
+++ b/app/src/main/res/layout/fragment_suggested_edits_image_tags_item.xml
@@ -71,6 +71,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
+                app:singleSelection="false"
                 app:chipSpacing="16dp"/>
 
         </LinearLayout>
