--- a/app/src/main/res/layout/fragment_suggested_edits_image_tags_item.xml
+++ b/app/src/main/res/layout/fragment_suggested_edits_image_tags_item.xml
@@ -97,10 +97,35 @@
         tools:visibility="visible">
 
         <ProgressBar
-            android:id="@+id/publishProgress"
+            android:id="@+id/publishProgressBar"
+            android:layout_width="96dp"
+            android:layout_height="96dp"
+            android:layout_gravity="center"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:indeterminate="false"
+            android:max="100"
+            android:progress="60"
+            android:secondaryProgress="100"
+            android:progressDrawable="@drawable/circular_progress" />
+
+        <ImageView
+            android:id="@+id/publishProgressCheck"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_gravity="center"
+            app:srcCompat="@drawable/ic_check_black_24dp"
+            android:contentDescription="@null"/>
+
+        <TextView
+            android:id="@+id/publishProgressText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:layout_marginTop="38dp"
+            android:textAllCaps="true"
+            android:fontFamily="sans-serif-medium"
+            android:letterSpacing="0.06"
+            android:text="@string/suggested_edits_image_tags_publishing"/>
 
     </FrameLayout>
 
