--- a/app/src/main/res/layout/fragment_suggested_edits_image_tags_item.xml
+++ b/app/src/main/res/layout/fragment_suggested_edits_image_tags_item.xml
@@ -21,6 +21,8 @@
         android:layout_gravity="center"
         android:layout_marginTop="48dp"
         android:layout_marginBottom="48dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:visibility="gone" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
