--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -19,6 +19,7 @@
     <attr name="button_highlight_border_shape" format="reference" />
     <attr name="randomizer_dice_icon_color" format="reference" />
     <attr name="page_tab_counts_shape_border" format="reference" />
+    <attr name="image_tags_onboarding_image" format="reference"/>
 
     <attr name="multi_select_background_color" format="reference" />
     <attr name="searchItemBackground" format="reference" />
