--- a/app/src/main/res/values/styles_dark.xml
+++ b/app/src/main/res/values/styles_dark.xml
@@ -76,6 +76,7 @@
         <item name="chip_background_color">@color/base20</item>
         <item name="chip_text_color">@color/base80</item>
         <item name="action_mode_green_background">@color/green50</item>
+        <item name="image_tags_onboarding_image">@drawable/ic_image_tags_onboarding_dark</item>
 
         <!-- Background for cards, lists, and controls -->
         <item name="paper_color">@color/base14</item>
