--- a/app/src/main/res/values/styles_light.xml
+++ b/app/src/main/res/values/styles_light.xml
@@ -79,6 +79,7 @@
         <item name="color_group_53">@color/accent90</item>
         <item name="color_group_54">@color/accent90</item>
         <item name="action_mode_green_background">@color/green50</item>
+        <item name="image_tags_onboarding_image">@drawable/ic_image_tags_onboarding_light</item>
 
         <!-- Background for cards, lists, and controls -->
         <item name="paper_color">@color/base100</item>
