Update for current state.
Change-Id: I2b9331bb66effcf13708949ad1b7ae8f9f8b257d

--- a/app/src/main/res/layout/fragment_suggested_edits_image_tags_item.xml
+++ b/app/src/main/res/layout/fragment_suggested_edits_image_tags_item.xml
@@ -39,8 +39,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintHeight_percent="0.6"
             android:layout_marginTop="64dp"
-            app:actualImageScaleType="fitCenter"
-            app:fadeDuration="0" />
+            android:scaleType="fitCenter" />
 
         <TextView
             android:id="@+id/imageCaption"
