--- a/app/src/main/res/layout/view_main_drawer.xml
+++ b/app/src/main/res/layout/view_main_drawer.xml
@@ -110,6 +110,26 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/main_drawer_watchlist_container"
+        style="@style/SideDrawerMenuItem">
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:contentDescription="@null"
+            app:srcCompat="@drawable/ic_oojs_watchlist"
+            app:tint="?attr/material_theme_secondary_color" />
+
+        <TextView
+            style="@android:style/TextAppearance"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_weight="1"
+            android:text="@string/watchlist_title" />
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/main_drawer_configure_container"
         style="@style/SideDrawerMenuItem">
 
