--- a/app/src/main/res/menu/menu_tabs.xml
+++ b/app/src/main/res/menu/menu_tabs.xml
@@ -7,6 +7,9 @@
     <item android:id="@+id/menu_close_all_tabs"
         android:title="@string/menu_close_all_tabs"
         app:showAsAction="never" />
+    <item android:id="@+id/menu_save_all_tabs"
+        android:title="@string/menu_save_all_tabs"
+        app:showAsAction="never" />
     <item android:id="@+id/menu_explore"
         android:title="@string/feed"
         app:showAsAction="never" />
