--- a/app/src/main/res/layout/view_horizontal_scroll_list_item_card.xml
+++ b/app/src/main/res/layout/view_horizontal_scroll_list_item_card.xml
@@ -17,7 +17,8 @@
     <TextView
         android:id="@+id/horizontal_scroll_list_item_text"
         android:layout_width="match_parent"
-        android:layout_height="112dp"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:layout_marginStart="16dp"
         android:layout_marginTop="13dp"
         android:layout_marginEnd="16dp"
