Design tweaks of existing suggested edit screens.
Change-Id: Ide73e1632af38e4a797e32dcd3410abc320c87c2

--- a/app/src/main/res/layout-land/fragment_suggested_edits_cards_item.xml
+++ b/app/src/main/res/layout-land/fragment_suggested_edits_cards_item.xml
@@ -82,11 +82,12 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:orientation="horizontal"
-                    android:visibility="gone">
+                    android:visibility="gone"
+                    tools:visibility="visible">
 
                     <View
                         android:id="@+id/accentSideBar"
-                        android:layout_width="3dp"
+                        android:layout_width="4dp"
                         android:layout_height="match_parent"
                         android:background="@color/accent50" />
 
