--- a/app/src/main/res/layout-land/fragment_suggested_edits_cards.xml
+++ b/app/src/main/res/layout-land/fragment_suggested_edits_cards.xml
@@ -2,7 +2,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="?attr/suggestions_background_color"
+    android:background="?attr/paper_color"
     android:id="@+id/addTitleDescriptionsCoordinatorLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
