--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -131,7 +131,7 @@
     </style>
 
     <style name="SuggestedEditsStyle" parent="@style/Widget.AppCompat.ActionBar">
-        <item name="background">?attr/suggestions_background_color</item>
+        <item name="background">?attr/paper_color</item>
         <item name="navigationIcon">?attr/homeAsUpIndicator</item>
         <item name="elevation">0dp</item>
         <item name="titleTextStyle">@style/PageToolbarTitleText</item>
