Add "file" field for image items, and don't display large title.
Change-Id: Ic25557092ed4f12ba843f05fb73fcfa46c979327

--- a/app/src/main/res/layout/fragment_suggested_edits_cards_item.xml
+++ b/app/src/main/res/layout/fragment_suggested_edits_cards_item.xml
@@ -134,6 +134,12 @@
                         android:paddingEnd="16dp">
 
                         <org.wikipedia.views.ImageDetailHorizontalView
+                            android:id="@+id/viewImageFileName"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            app:title="@string/suggested_edits_image_caption_summary_title_file" />
+
+                        <org.wikipedia.views.ImageDetailHorizontalView
                             android:id="@+id/viewImageArtist"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
