Simplify/improve pulsating overlay on navigation tabs.
Change-Id: I9f5757b959b29bb7bba13c691ec535f4fb6ce49c

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -25,19 +25,13 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:layout_gravity="bottom"
-        android:background="?attr/nav_tab_background_color"
         android:elevation="6dp">
-
-        <org.wikipedia.navtab.NavTabOverlayLayout
-            android:id="@+id/fragment_main_nav_tab_overlay_layout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
 
         <org.wikipedia.navtab.NavTabLayout
             android:id="@+id/fragment_main_nav_tab_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@android:color/transparent"
+            android:background="?attr/nav_tab_background_color"
             app:itemIconTint="?attr/nav_tab_item_color_state"
             app:itemTextColor="?attr/nav_tab_item_color_state"
             app:itemTextAppearanceInactive="@style/BottomNavigationTextAppearanceInactive"
@@ -45,6 +39,13 @@
             app:tabGravity="fill"
             app:labelVisibilityMode="labeled"
             app:tabIndicatorColor="@android:color/transparent" />
+
+        <org.wikipedia.navtab.NavTabOverlayLayout
+            android:id="@+id/fragment_main_nav_tab_overlay_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:elevation="8dp"/>
+
     </FrameLayout>
 
 </LinearLayout>
