Add missing background color.
Change-Id: I2b856c99d92b6ce3af67fd305d192515ced22825

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -25,6 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:layout_gravity="bottom"
+        android:background="?attr/nav_tab_background_color"
         android:elevation="6dp">
 
         <org.wikipedia.navtab.NavTabLayout
